--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -1,30 +1,36 @@
-*{
-    font-family: 'Roboto';
-}
+@import url('../index.css');
 
+main{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 .main{
-    height: calc(100% - 70px);
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items:center;
-    justify-content: center;
+    flex-direction: row;
+    gap: 2;
 }
-
 .formConteiner{
-    border-radius: 10px;
-    background: rgb(96,96,96, 0.5);
-    filter: drop-shadow(4px 4px 6px #000000);
-    filter: brightness(1);
-    width: 500px;
-    height: 430px;
-    padding: 4px;
-    margin: 4.125rem;
+   flex: 1;
+   min-width: 300px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   background-color: #EEE;
+   height: 100%;
+   padding: 24px;
 }
 
-.formConteiner > p {
-    text-align: center;
+.welcome {
+    margin-bottom: 16px;
 }
 
-p{
+fp{
     color: #fff;
     font-weight: bold;
     font-size: 2.094rem;
@@ -33,22 +39,53 @@ p{
 }
 
 .conteinerLogin{
-    margin-left: 0.62rem;
     display: flex;
-    justify-content:center;
     flex-direction: column;
-    margin-top: 3%;
+    gap: 16px;
 }
 
-.forgetPassword{
-    margin-top: 15px;
-    color: #fff;
+.fP{
     cursor: pointer;
+}
+
+.Logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    flex: 2;
+    background-color: #33333350;
+    background-image: url(../images/maxwell-ridgeway-UyhtqolKMb4-unsplash.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.logoContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 32px;
+}
+
+.logoContainer small {
+    margin-top: -16px;
     font-weight: lighter;
-    font-size: 21px;
-    width: 30%;
-    height: 20px;
-    text-wrap: nowrap;
+}
+
+.ConteinerLink{
+    height: 5px;
+    width: auto;
+    text-align: center;
+    margin: 25px;
+}
+
+.ConteinerLink small{
+    color: #333;
+}
+
+.ConteinerLink h5{
+    color:black;
+    margin: 2px;
 }
 
 @media screen and (min-width: 576px) {
