--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -88,10 +88,25 @@ fp{
     margin: 2px;
 }
 
-@media screen and (min-width: 576px) {
-    .form-content{
-        width: 550px;
-        height: 440px;
+@media screen and (min-width:768px) and (max-width: 1023px) {
+    .formConteiner{
+        min-width: 100%;
+        max-width: 100%;
+    }
+    
+}
+
+@media screen and (min-width:1025px) {
+    .formConteiner{
+        min-width: 300px;
+    }
+    
+}
+
+@media screen and (max-width: 767px) {
+    .formConteiner{
+        min-width: 100%;
+        max-width: 100%;
     }
     
 }
